@@ -128,6 +128,7 @@ Collate:
     'grob-absolute.r'
     'grob-dotstack.r'
     'grob-null.r'
+    'grouping.r'
     'guide-colorbar.r'
     'guide-legend.r'
     'guides-.r'
@@ -205,7 +206,6 @@ Collate:
     'utilities-break.r'
     'utilities-grid.r'
     'utilities-help.r'
-    'utilities-layer.r'
     'utilities-matrix.r'
     'utilities-resolution.r'
     'utilities-table.r'
