@@ -3,10 +3,9 @@
 \name{aes_group_order}
 \alias{aes_group_order}
 \alias{group}
-\alias{order}
-\title{Aesthetics: group, order}
+\title{Aesthetics: group}
 \description{
-Aesthetics: group, order
+Aesthetics: group
 }
 \examples{
 \donttest{
@@ -81,16 +80,6 @@ boysbox + geom_boxplot()
 # we again need to override the default grouping for that layer with aes(group = Subject)
 boysbox <- boysbox + geom_boxplot()
 boysbox + geom_line(aes(group = Subject), colour = "blue")
-
-# Use the order aesthetic to change stacking order of bar charts
-w <- ggplot(diamonds, aes(clarity, fill = cut))
-w + geom_bar()
-w + geom_bar(aes(order = desc(cut)))
-
-# Can also be used to change plot order of scatter plots
-d <- ggplot(diamonds, aes(carat, price, colour = cut))
-d + geom_point()
-d + geom_point(aes(order = sample(seq_along(carat))))
 }
 }
 
